# smpp2kafka

./: .gitignore  Cargo.toml  build.rs
src/: account.rs  data.rs  kafka_message_store.rs  lib.rs  main.rs  message.proto  server.rs  session.rs  shutdown.rs
tests/: accounts.json  helper.rs  server_tests.rs
